# arduinoWebSockets

./: CMakeLists.txt  library.json
src/: WebSockets.cpp  WebSockets.h  WebSocketsClient.cpp  WebSocketsServer.cpp  WebSocketsServer.h
src/libb64/: cdecode.c  cencode.c
src/libsha1/: libsha1.c  libsha1.h
